# pinn_models

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: getting_started.md  index.md
docs/api/: domain.md  functional.md  index.md  networks.md  problem.md  trainer.md
docs/examples/: heat_equation.ipynb  index.md
docs/javascripts/: mathjax.js
examples/: 1+1D_allen_cahn_periodic.ipynb  1+1D_viscous_burgers.ipynb  1+1_heat_equation.ipynb  1+1_laser_ablations.ipynb  1+2_laser_ablations.py  1+2_laser_ablations_PirateNet.py  1+2_laser_ablations_WFFNN.py  1+2_laser_ablations_fourier.py  1+2_laser_ablations_jax.py  1+2_laser_ablations_soap.py  1D_overdamped_oscillator copy.ipynb  1D_overdamped_oscillator.ipynb  2D_heat_equation_curved.ipynb  2D_helmholz.ipynb  2D_linear_elasticity.ipynb  2D_poisson_strong.ipynb  2D_poisson_weak.ipynb  catch_slip_adhesion.ipynb  catch_slip_adhesion.py  curve_fitting_weights_evolution.py  damped_pendulum_fourier_comparison.py  forward_fem_sketch.py  forward_inverse_sketch.py  heat_equation.ipynb  laser_ablation_mesh_figure.py  linear_regression_gradient_descent.py  neural_network_sketch.py  nn_pinn_sketch.py  random_search_visualization.py  test_weak_pipeline.py
pinns/: __init__.py  boundary.py  domain.py  functional.py  networks.py  problem.py  problem_weak.py  trainer.py
pinns/backends/: __init__.py  base_trainer.py
pinns/backends/jax/: __init__.py  functional.py  networks.py  trainer.py  trainer_old.py
pinns/backends/torch/: __init__.py  networks.py  trainer.py  trainer_old.py
tests/: __init__.py  test_basic.py  test_weak_pipeline.py
